syntax = "proto3";

package comment_def.v1;

import "user_def/v1/def.proto";

message GetCommentRequest {
  string id /*            */ = 1;
  optional string token /**/ = 2;
}

message GetCommentResponse {
  string id /*                   */ = 1;
  string content /*              */ = 2;
  string rendered_content /*     */ = 3;
  string user_id /*              */ = 4;
  string story_id /*             */ = 5;
  string story_slug /*           */ = 6;
  string story_writer_username /**/ = 7;
  bool hidden /*                 */ = 8;
  optional string edited_at /*   */ = 9;
  string created_at /*           */ = 10;
  uint32 like_count /*           */ = 11;
  uint32 reply_count /*          */ = 12;
  user_def.v1.User user /*       */ = 13;
  // User specific props
  optional bool is_liked /*      */ = 14;
}
